--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit==1.0.0
+opencv-contrib-python-headless
 keras==2.6.0
 numpy==1.19.5
 opencv_python==4.4.0.46
-opencv-contrib-python-headless
+opencv-python-headless
 Keras-Preprocessing==1.1.2
 tensorflow==2.6.0
 scikit_learn==1.0
